video box doesn't fit video bug fixed

--- a/qencode5-portal/css/q6__tutorial.css
+++ b/qencode5-portal/css/q6__tutorial.css
@@ -1792,6 +1792,16 @@
 }
 
 
+.q6-modal--video-player .modal-content {
+    width: max-content;
+    height: max-content;
+}
+
+.q6-modal--video-player .modal-dialog {
+    width: max-content;
+    height: max-content;
+}
+
 
 @media (max-width: 1160px){
     .q6-tutorial-intro {
